--- a/frontend/src/Css/Navbar.css
+++ b/frontend/src/Css/Navbar.css
@@ -18,8 +18,8 @@
 .navbar-wrapper{
     display: flex;
     align-items: center;
-    width: 100%;
-   
+    width: 95% ;
+
 }
 
 .select-option{
@@ -29,7 +29,7 @@
    align-items: center;
    gap: 0.4em;
    padding: 0.2em 0.6em;
-    margin-left: 3em;
+   margin: 1em;
     border: 1px rgb(207, 207, 207) solid;
 }
 .selected{
@@ -65,7 +65,7 @@
     position: absolute;
     top: 5vh;
     z-index: 100;
-    left: 3em;
+
     background-color: rgb(243, 247, 254);
     box-shadow: 0px 0px 2px 0px grey;
     display: flex;
