--- a/frontend/src/Css/MainPage.css
+++ b/frontend/src/Css/MainPage.css
@@ -15,3 +15,13 @@ body{
     
     background-color: rgb(243, 247, 254);
 }
+
+
+/* loader  */
+.loader{
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
