--- a/frontend/src/Css/Navbar.css
+++ b/frontend/src/Css/Navbar.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/* navbar styling  */
 .navbar-main-container{
     width: 100%;
     height: 5vh;
@@ -36,13 +37,13 @@
     font-weight: 500;
 }
 .select-icon{
-    background-image: url("../imgs/select.png");
+    background-image: url("../imgs/adjustments.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width: 20px;
+    width: 17px;
     opacity: 0.6;
-    height: 20px;
+    height: 17px;
 }
 .arrow{
     background-image: url("../imgs/down-arrow.png");
@@ -65,11 +66,12 @@
     position: absolute;
     top: 5vh;
     z-index: 100;
-
+    left: 2.5%;
+    margin-left: 1em;
     background-color: rgb(243, 247, 254);
-    box-shadow: 0px 0px 2px 0px grey;
+    box-shadow: 0px 0px 4px 0px rgb(172, 172, 172);
     display: flex;
-    width: 20em;
+    width: 17em;
    border-radius:0.4em ;
     flex-direction: column;
     justify-content: center;
